# Hermes

./: .env.example  .firebaserc  .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CRUCIX_INTEGRATION.md  DESIGN.json  DESIGN.md  PRD_daily_newspaper.md  PRODUCT.md  README.md  README_CLEANUP_SUMMARY.md  README_new.md  firebase.json  firestore.rules  index.html  package-lock.json  package.json  pilot setup instructions.md  pyproject.toml  requirements.txt  vite.config.js
.claude/skills/release/: SKILL.md
.github/workflows/: build.yml  firebase-hosting-deploy.yml  firebase-hosting-pull-request.yml  notify.yml  release.yml
archive/pre-restart-2026-03-10/: .gitignore  PYTEST_ISSUES_SUMMARY.md  README.md
archive/v1-hermes/: CHANGELOG.md  CRUCIX_INTEGRATION.md  README.md  firestore.rules  index.html  tailwind.config.js
data/digests/: 2025-08-07.html  2025-08-07.json  2025-08-07.md
data/fixtures/: edition_sample.json
docs/: APP_STYLE.md  CHATGPT_PROJECT_INSTRUCTIONS.md  DAILY_BRIEFING_FORMAT.md  DAILY_BRIEFING_PROMPT.md  INTELLIGENCE_AMPLIFIER_PROMPT.md  INTELLIGENCE_LAYER_UI_STORY_STRATEGY_2026-03-20.md  SYNTHESIS_PROMPT.md  TEST_IMPLEMENTATION_SUMMARY.md  UPGRADES.md  VISION.md  index.html  manifest.json  sw.js
docs/archive/: DAILY_BRIEFING_FORMAT.md  INTELLIGENCE_REVIEW_2026-03-19.md
examples/: hermes-export-example.json
hermes/: __init__.py  cli.py  config.py  fetcher.py  filter.py  main.py  summarizer.py  writer.py
project_hermes/: config.py  digest_writer.py  summarizer.py
public/: manifest.webmanifest
reference/: daily_newspaper.jsx
scripts/: filter_engine.py  main.py  news_fetcher.py
src/: App.jsx  __init__.py  build.py  config.py  curate.py  fetch.py  images.py  index.css  main.jsx  normalize.py  render.py  weather.py
src/components/: AmplifierModal.jsx  AppMenu.jsx  BottomNav.jsx  BriefingDisplay.jsx  DevelopmentCard.jsx  DisclosurePanel.jsx  HermesMark.jsx  PulseWidget.jsx  RiskMatrixWidget.jsx  SparklineWidget.jsx  ThreadCard.jsx
src/data/: sampleBriefing.js
src/lib/: firebase.js  versionWatcher.js
src/utils/: date.js  json.js  prompts.js
src/views/: AddBriefingView.jsx  ArchiveView.jsx  HomeView.jsx  ImportFlowView.jsx  OnboardingView.jsx  SearchView.jsx  StoryView.jsx  WorkflowView.jsx
template/: index.template.html
tests/: conftest.py  hermes-export-2026-03-20T01-44-49Z.json  hermes-export-2026-03-20T20-07-24Z-README.txt  hermes-export-2026-03-20T20-07-24Z.json  test_cli.py  test_config.py  test_fetcher.py  test_filter.py  test_main.py  test_summarizer.py
(+33 files in other folders)
